feat: add repo filter, add hideStdout, hideStderr, format subdir for artifacts
